# Cloudsend

./: .gitignore  .info  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  EXTERNAL_ASSET_REGISTRY.md  PC-Build.md  PROJECT_START_HERE.md  README.md  TASK_TEMPLATE.md  TEST_MATRIX.md  build.cmd  build.py  build.sh  env.sh  new-build.cmd  terminal.md
.codex/: AI_RULES.md  ARCHITECTURE_MEMORY.md  CHANGELOG_AI.md  CHANGE_EVENT_LOG.md  CURRENT_WORK.md  DECISION_LOG.md  PROJECT_MEMORY.md  PROJECT_STATE.md  SESSION_START_PROTOCOL.md  TASK_HISTORY.md
.github/workflows/: bridge.yml  ci.yml  clear-cache.yml  fdroid.yml  flutter-build.yml  flutter-ci.yml  flutter-nightly.yml  flutter-tag.yml  playground.yml  third-party-RustDeskTempTopMostWindow.yml  update_submodules.yml  winget.yml
docs/: ADB_LADB_INTEGRATION_MEMORY.md  CHANGELOG.md  DOCUMENT_AUDIT.md  ENGINEERING_ANDROID_RUNTIME.md  ENGINEERING_BASELINE.md  ENGINEERING_INDEX.md  README-ZH.md  REPO_TRUE_STRUCTURE_MAP.md  SOURCE_TRUTH_AUDIT_2026_05_18.md  TASK_ENTRYPOINTS.md  ZEGO_TOKEN_SERVICE_DEPLOYMENT.md  ZEGO_VOICE_CALL_ARCHITECTURE.md  ZEGO_VOICE_CALL_INTEGRATION.md
docs/ADR/: 0000-adopt-architecture-decision-records.md  (+15 more)
examples/: ipc.rs
flutter/: pubspec.yaml
libs/portable/: Cargo.toml  generate.py
libs/portable/src/: bin_reader.rs  main.rs
scripts/: deploy_zego_token_service.sh
src/: auth_2fa.rs  client.rs  clipboard.rs  common.rs  flutter.rs  flutter_ffi.rs  ipc.rs  main.rs  rendezvous_mediator.rs  service.rs  ui.rs  ui_cm_interface.rs  ui_session_interface.rs  virtual_display_manager.rs
(+124 files in other folders)
